tests/ui/pattern/issue-92074-macro-ice.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-92074-macro-ice.rs:18:25
   |
LL | / macro_rules! make_vec {
LL | |     () => { force_expr!(Vec::new()) }
   | |                         ^^^^^^^^^^
LL | | }
   | |_- in this expansion of `make_vec!`
...
LL |       assert!(matches!(x, En::A(make_vec!())));
   |                                 ----------- in this macro invocation

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-92074-macro-ice.rs:22:24
   |
LL | / macro_rules! make_pat {
LL | |     () => { force_pat!(get_usize(), get_usize()) }
   | |                        ^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- in this expansion of `make_pat!`
...
LL |       assert!(matches!(5, make_pat!()));
   |                           ----------- in this macro invocation

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-92074-macro-ice.rs:22:37
   |
LL | / macro_rules! make_pat {
LL | |     () => { force_pat!(get_usize(), get_usize()) }
   | |                                     ^^^^^^^^^^^
LL | |
LL | |
LL | | }
   | |_- in this expansion of `make_pat!`
...
LL |       assert!(matches!(5, make_pat!()));
   |                           ----------- in this macro invocation

error: aborting due to 3 previous errors

